remove IntegrationTest category
Categories drives IF a test should be executed within a profile at
all, not WHEN it should be executed. These are 2 orthogonal concepts.